handling cookies and editing profile completed

--- a/frontend/edit_profile.html
+++ b/frontend/edit_profile.html
@@ -18,14 +18,14 @@
     <div class="container">
         <h2 class="text-center mb-4">Edit Profile</h2>
         <form id="editProfileForm">
-            <div class="mb-3">
+            <!-- <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" placeholder="Enter your username">
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter your email">
-            </div>
+            </div> -->
             <div class="mb-3">
                 <label for="nationality" class="form-label">Nationality</label>
                 <input type="text" class="form-control" id="nationality" placeholder="Enter your nationality">
