about us and login button added to the navbar

--- a/frontend/mystudies.html
+++ b/frontend/mystudies.html
@@ -24,14 +24,20 @@
 				<li class="nav-item">
 					<a class="nav-link" href="mydata.html">My Data</a>
 				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="mystudies.html">My Studies</a>
+				<li class="nav-item">
+					<a class="nav-link active" href="mystudies.html">My Studies</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="explore.html">Explore</a>
 				</li>
 			</ul>
 			<ul class="navbar-nav d-flex justify-content-between">
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about_us.html">About Us</a>
+                </li>
 				<li class="nav-item">
 					<a class="nav-link" href="profile.html">
 						<img src="profile.png" style="height: 30px;">
