--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="mydata.html">My Data</a>
+                    <a class="nav-link" href="mydata.html">My Data</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="mystudies.html">My Studies</a>
@@ -43,6 +43,12 @@
                 </li>
             </ul>
             <ul class="navbar-nav d-flex justify-content-between">
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about_us.html">About Us</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
