--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -30,6 +30,12 @@
             </ul>
             <ul class="navbar-nav d-flex justify-content-between">
                 <li class="nav-item">
+                    <a class="nav-link" href="login.html">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about_us.html">About Us</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
                     </a>
