--- a/frontend/register.html
+++ b/frontend/register.html
@@ -10,6 +10,41 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light">
+		<a class="navbar-brand" href="homepage.html">
+			<img src="logo.webp" alt="Logo" style="height: 30px;">
+		</a>
+		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="mydata.html">My Data</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="mystudies.html">My Studies</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="explore.html">Explore</a>
+				</li>
+			</ul>
+			<ul class="navbar-nav d-flex justify-content-between">
+                <li class="nav-item">
+                    <a class="nav-link active" href="login.html">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about_us.html">About Us</a>
+                </li>
+				<li class="nav-item">
+					<a class="nav-link" href="profile.html">
+						<img src="profile.png" style="height: 30px;">
+					</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
     <div class="container login-container">
         <h2 class="text-center mb-4">Register</h2>
         <form id="registerForm">
