navbar items customized based on login status

--- a/frontend/edit_profile.html
+++ b/frontend/edit_profile.html
@@ -36,8 +36,8 @@
 				</li>
 			</ul>
 			<ul class="navbar-nav d-flex justify-content-between">
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Log In</a>
+                <li class="nav-item" id="navbar-login">
+                    <button class="btn btn-link nav-link" id="logout-button">Log Out</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about_us.html">About Us</a>
