--- a/frontend/about_us.html
+++ b/frontend/about_us.html
@@ -4,21 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        .chart-container {
-            height: 40vh;
-            width: auto;
-        }
-
-        .chart-wrapper {
-            margin-top: 70px;
-            margin-bottom: 170px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -32,10 +22,10 @@
         </button>
         <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item" id="navbar-data">
                     <a class="nav-link" href="mydata.html">My Data</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="navbar-studies">
                     <a class="nav-link" href="mystudies.html">My Studies</a>
                 </li>
                 <li class="nav-item">
@@ -43,13 +33,13 @@
                 </li>
             </ul>
             <ul class="navbar-nav d-flex justify-content-between">
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Log In</a>
+                <li class="nav-item" id="navbar-login">
+                    <button class="btn btn-link nav-link" id="logout-button">Log Out</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="about_us.html">About Us</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="navbar-profile">
                     <a class="nav-link" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
                     </a>
@@ -61,7 +51,12 @@
     <div class="container mt-5">
         <h1>Some info about us</h1>
 
-        
+    <script>
+        window.addEventListener("load", function() {
+            getAboutUs();
+        });
+    </script>
+    <script src="scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
 </body>
