--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -22,29 +22,29 @@
 		</button>
 		<div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="mydata.html">My Data</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="mystudies.html">My Studies</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" href="explore.html">Explore</a>
-				</li>
-			</ul>
-			<ul class="navbar-nav d-flex justify-content-between">
+                <li class="nav-item" id="navbar-data">
+                    <a class="nav-link" href="mydata.html">My Data</a>
+                </li>
+                <li class="nav-item" id="navbar-studies">
+                    <a class="nav-link" href="mystudies.html">My Studies</a>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html">Log In</a>
+                    <a class="nav-link active" href="explore.html">Explore</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav d-flex justify-content-between">
+                <li class="nav-item" id="navbar-login">
+                    <button class="btn btn-link nav-link" id="logout-button">Log Out</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about_us.html">About Us</a>
                 </li>
-				<li class="nav-item">
-					<a class="nav-link" href="profile.html">
-						<img src="profile.png" style="height: 30px;">
-					</a>
-				</li>
-			</ul>
+                <li class="nav-item" id="navbar-profile">
+                    <a class="nav-link" href="profile.html">
+                        <img src="profile.png" style="height: 30px;">
+                    </a>
+                </li>
+            </ul>
 		</div>
 	</nav>
     <div class="col-md-11" id="sug-studies-nav">
@@ -137,15 +137,16 @@
         </div>
     </div>
 
-    <!-- <script src=" https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> -->
+    <script>
+        window.addEventListener("load", function() {
+            getExplore();
+        });
+    </script>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
-    <script
-        src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
