--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="style.css">
     <style>
         .chart-container {
             height: 40vh;
@@ -32,10 +33,10 @@
         </button>
         <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item" id="navbar-data">
                     <a class="nav-link" href="mydata.html">My Data</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="navbar-studies">
                     <a class="nav-link" href="mystudies.html">My Studies</a>
                 </li>
                 <li class="nav-item">
@@ -43,13 +44,13 @@
                 </li>
             </ul>
             <ul class="navbar-nav d-flex justify-content-between">
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Log In</a>
+                <li class="nav-item" id="navbar-login">
+                    <button class="btn btn-link nav-link" id="logout-button">Log Out</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about_us.html">About Us</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="navbar-profile">
                     <a class="nav-link" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
                     </a>
@@ -108,7 +109,13 @@
         </div>
     </div>
 
+    <script src="scripts.js"></script>
     <script>
+        window.addEventListener("load", function() {
+            getHomepage();
+        });
+
+
         // Data for Sleep Hours Chart
         const sleepHoursData = {
             labels: ["Week 1", "Week 2", "Week 3", "Week 4"],
