log out compeleted

--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -34,7 +34,7 @@
 			</ul>
 			<ul class="navbar-nav d-flex justify-content-between">
                 <li class="nav-item" id="navbar-login">
-                    <button class="btn btn-link nav-link" id="logout-button">Log Out</button>
+                    <button class="btn btn-link nav-link" id="logout-button" onclick="logOut();">Log Out</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about_us.html">About Us</a>
@@ -167,7 +167,7 @@
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
 	<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
-	<script src="script.js"></script>
+	<script src="scripts.js"></script>
 </body>
 
 </html>
