--- a/frontend/edit_profile.html
+++ b/frontend/edit_profile.html
@@ -6,12 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <style>
-        .container {
-            max-width: 400px;
-            margin-top: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -37,7 +32,7 @@
 			</ul>
 			<ul class="navbar-nav d-flex justify-content-between">
                 <li class="nav-item" id="navbar-login">
-                    <button class="btn btn-link nav-link" id="logout-button">Log Out</button>
+                    <button class="btn btn-link nav-link" id="logout-button" onclick="logOut();">Log Out</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about_us.html">About Us</a>
@@ -50,7 +45,7 @@
 			</ul>
 		</div>
 	</nav>
-    <div class="container">
+    <div class="form-container container">
         <h2 class="text-center mb-4">Edit Profile</h2>
         <form id="editProfileForm">
             <!-- <div class="mb-3">
