--- a/frontend/mystudies.html
+++ b/frontend/mystudies.html
@@ -33,7 +33,7 @@
 			</ul>
 			<ul class="navbar-nav d-flex justify-content-between">
                 <li class="nav-item" id="navbar-login">
-                    <button class="btn btn-link nav-link" id="logout-button">Log Out</button>
+                    <button class="btn btn-link nav-link" id="logout-button" onclick="logOut();">Log Out</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about_us.html">About Us</a>
@@ -90,7 +90,7 @@
 	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> -->
 	<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
-	<script src="script.js"></script>
+	<script src="scripts.js"></script>
 </body>
 
 </html>
