--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -30,7 +30,7 @@
             </ul>
             <ul class="navbar-nav d-flex justify-content-between">
                 <li class="nav-item" id="navbar-login">
-                    <button class="btn btn-link nav-link" id="logout-button">Log Out</button>
+                    <button class="btn btn-link nav-link" id="logout-button" onclick="logOut();">Log Out</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about_us.html">About Us</a>
