--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -49,13 +49,10 @@
 	</nav>
 	<main class="d-flex flex-nowrap">
 		<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
-			<ul class="list-unstyled ps-0">
-				<li class="mb-1">
-					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-						data-bs-toggle="collapse" data-bs-target="#data1-collapse" aria-expanded="false">
-						Data Group 1
-					</button>
-					<div class="collapse" id="data1-collapse">
+			<!-- <ul class="list-unstyled ps-0">
+				<li class="mb-1"> -->
+					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" id="data-button"></button>
+					<!-- <div class="collapse" id="data1-collapse">
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
 							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
 									1.1</a></li>
@@ -105,10 +102,11 @@
 						Upload New Data
 					</button>
 				</li>
-			</ul>
+			</ul> -->
 		</div>
-		<div class="mt-5 d-flex justify-content-center align-items-center flex-grow-1">
-			<table class="table table-bordered table-striped w-50">
+		<div class="mt-5 d-flex" style="width: 100%;">
+			<pre id="json-data" style="background-color: #f8f9fa; padding: 20px; border-radius: 5px; margin-left: 10%; width: 80%;"></pre>
+			<!-- <table class="table table-bordered table-striped w-50">
 				<thead class="thead-dark">
 					<tr>
 						<th>ID</th>
@@ -158,15 +156,17 @@
 						<td>abc@abc.com</td>
 					</tr>
 				</tbody>
-			</table>
+			</table> -->
 		</div>
 	</main>
-	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> -->
+	<script>
+		window.addEventListener("load", function() {
+            getMyData();
+        });
+	</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
-	<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 	<script src="scripts.js"></script>
 </body>
 
