--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -49,114 +49,10 @@
 	</nav>
 	<main class="d-flex flex-nowrap">
 		<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
-			<!-- <ul class="list-unstyled ps-0">
-				<li class="mb-1"> -->
-					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" id="data-button"></button>
-					<!-- <div class="collapse" id="data1-collapse">
-						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
-									1.1</a></li>
-							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
-									1.2</a></li>
-							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
-									1.3</a></li>
-						</ul>
-					</div>
-				</li>
-				<li class="mb-1">
-					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-						data-bs-toggle="collapse" data-bs-target="#data2-collapse" aria-expanded="false">
-						Data Group 2
-					</button>
-					<div class="collapse" id="data2-collapse">
-						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
-									2.1</a></li>
-							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
-									2.2</a></li>
-							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
-									2.3</a></li>
-						</ul>
-					</div>
-				</li>
-				<li class="mb-1">
-					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-						data-bs-toggle="collapse" data-bs-target="#data3-collapse" aria-expanded="false">
-						Data Group 3
-					</button>
-					<div class="collapse" id="data3-collapse">
-						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
-									3.1</a></li>
-							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
-									3.2</a></li>
-							<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Data Group
-									3.3</a></li>
-						</ul>
-					</div>
-				</li>
-
-				<li class="border-top my-3"></li>
-				<li class="mb-1">
-					<button class="btn btn-primary">
-						Upload New Data
-					</button>
-				</li>
-			</ul> -->
+			<ul class="list-unstyled ps-0" id="data-date-buttons"></ul>
 		</div>
 		<div class="mt-5 d-flex" style="width: 100%;">
 			<pre id="json-data" style="background-color: #f8f9fa; padding: 20px; border-radius: 5px; margin-left: 10%; width: 80%;"></pre>
-			<!-- <table class="table table-bordered table-striped w-50">
-				<thead class="thead-dark">
-					<tr>
-						<th>ID</th>
-						<th>Name</th>
-						<th>Email</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>1</td>
-						<td>abc</td>
-						<td>abc@abc.com</td>
-					</tr>
-					<tr>
-						<td>2</td>
-						<td>abc</td>
-						<td>abc@abc.com</td>
-					</tr>
-					<tr>
-						<td>3</td>
-						<td>abc</td>
-						<td>abc@abc.com</td>
-					</tr>
-					<tr>
-						<td>4</td>
-						<td>abc</td>
-						<td>abc@abc.com</td>
-					</tr>
-					<tr>
-						<td>5</td>
-						<td>abc</td>
-						<td>abc@abc.com</td>
-					</tr>
-					<tr>
-						<td>6</td>
-						<td>abc</td>
-						<td>abc@abc.com</td>
-					</tr>
-					<tr>
-						<td>7</td>
-						<td>abc</td>
-						<td>abc@abc.com</td>
-					</tr>
-					<tr>
-						<td>8</td>
-						<td>abc</td>
-						<td>abc@abc.com</td>
-					</tr>
-				</tbody>
-			</table> -->
 		</div>
 	</main>
 	<script>
