--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -49,7 +49,19 @@
 	</nav>
 	<main class="d-flex flex-nowrap">
 		<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
-			<ul class="list-unstyled ps-0" id="data-date-buttons"></ul>
+			<ul class="list-unstyled ps-0">
+				<li class="mb-1">
+					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+						data-bs-toggle="collapse" data-bs-target="#data1-collapse" aria-expanded="false">
+						Activity
+					</button>
+					<div class="collapse" id="data1-collapse">
+						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="data-date-buttons">
+						
+						</ul>
+					</div>
+				</li>
+			</ul>
 		</div>
 		<div class="mt-5 d-flex" style="width: 100%;">
 			<pre id="json-data" style="background-color: #f8f9fa; padding: 20px; border-radius: 5px; margin-left: 10%; width: 80%;"></pre>
