--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -56,9 +56,16 @@
 						Activity
 					</button>
 					<div class="collapse" id="data1-collapse">
-						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="data-date-buttons">
-						
-						</ul>
+						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="activity-date-buttons"></ul>
+					</div>
+				</li>
+				<li class="mb-1">
+					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+						data-bs-toggle="collapse" data-bs-target="#data2-collapse" aria-expanded="false">
+						Heart Rate
+					</button>
+					<div class="collapse" id="data2-collapse">
+						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="hr-date-buttons"></ul>
 					</div>
 				</li>
 			</ul>
