getting sleep logs from fitbit APIs and storing them in the database

--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -68,6 +68,15 @@
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="hr-date-buttons"></ul>
 					</div>
 				</li>
+				<li class="mb-1">
+					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+						data-bs-toggle="collapse" data-bs-target="#data3-collapse" aria-expanded="false">
+						Sleep
+					</button>
+					<div class="collapse" id="data3-collapse">
+						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="sleep-date-buttons"></ul>
+					</div>
+				</li>
 			</ul>
 		</div>
 		<div class="mt-5 d-flex" style="width: 100%;">
