data appearance in mydata page changed to tables

--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -88,8 +88,9 @@
 				</li>
 			</ul>
 		</div>
-		<div class="mt-5 d-flex" style="width: 100%;">
-			<pre id="json-data" style="background-color: #f8f9fa; padding: 20px; border-radius: 5px; margin-left: 10%; width: 80%;"></pre>
+		<div class="table-container mt-5 flex-grow-1">
+			<table class="table table-bordered table-striped w-50" id="data-table">
+			</table>
 		</div>
 	</main>
 	<script>
