--- a/frontend/test.html
+++ b/frontend/test.html
@@ -3,63 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Table</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* Ensure the body takes full height */
-        body {
-            min-height: 100vh;
-            min-height: -webkit-fill-available;
-        }
-        /* Center the table within its container */
-        .table-container {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start; /* Align items to the start (top) of the container */
-            padding: 20px; /* Add some padding to make the layout nicer */
-        }
-    </style>
-</head>
+    <title>File Upload</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"></head>
 <body>
-<main class="d-flex flex-nowrap">
-    <div class="table-container mt-5 flex-grow-1">
-        <table class="table table-bordered table-striped w-50">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Title</th>
-                    <th scope="col">Value</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Active Duration</td>
-                    <td>100000</td>
-                </tr>
-                <tr>
-                    <td>Activity Name</td>
-                    <td>Walk</td>
-                </tr>
-                <tr>
-                    <td>Calories</td>
-                    <td>60</td>
-                </tr>
-                <tr>
-                    <td>Distance</td>
-                    <td>20</td>
-                </tr>
-                <tr>
-                    <td>Speed</td>
-                    <td>720</td>
-                </tr>
-                <tr>
-                    <td>Steps</td>
-                    <td>9678</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</main>
+    <h1>Upload JSON or Text File</h1>
+        <input class="form-control form-control-sm" id="fileInput" type="file">
+    <button class="btn btn-success" onclick="uploadFile()">Upload</button>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function uploadFile() {
+            const fileInput = document.getElementById('fileInput');
+            const file = fileInput.files[0];
+
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    const content = e.target.result;
+
+                    fetch('/upload', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({ content: content })
+                    })
+                    .then(response => response.json())
+                    .then(data => {
+                        alert('File uploaded successfully');
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                    });
+                };
+                reader.readAsText(file);
+            } else {
+                alert('Please select a file');
+            }
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </body>
 </html>
