showing user data files in the mydata page

--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -87,6 +87,15 @@
 					</div>
 				</li>
 				<li class="mb-1">
+					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+						data-bs-toggle="collapse" data-bs-target="#data5-collapse" aria-expanded="false">
+						Data Files
+					</button>
+					<div class="collapse" id="data5-collapse">
+						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="files-buttons"></ul>
+					</div>
+				</li>
+				<li class="mb-1">
 					<button class="btn btn-toggle no-before d-inline-flex align-items-center rounded border-0" id="uplaod-button">
 						Upload New Data
 					</button>
