--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -96,7 +96,7 @@
 					</div>
 				</li>
 				<li class="mb-1">
-					<button class="btn btn-toggle no-before d-inline-flex align-items-center rounded border-0" id="uplaod-button">
+					<button class="btn btn-toggle no-before d-inline-flex align-items-center rounded border-0" onclick="generateUploadButton();">
 						Upload New Data
 					</button>
 				</li>
@@ -109,8 +109,6 @@
 		window.addEventListener("load", function() {
             getMyData();
         });
-
-		document.getElementById("uplaod-button").addEventListener("click", function() { generateUploadButton(); });
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
