--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -8,7 +8,8 @@
 	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+		<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -50,6 +51,12 @@
 	<main class="d-flex flex-nowrap">
 		<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
 			<ul class="list-unstyled ps-0">
+				<li class="mb-1">
+					<button class="btn btn-outline-info d-inline-flex align-items-center rounded" onclick="reloadPage();">
+						<i class="fa fa-refresh me-2"></i>
+						Refresh
+					</button>
+				</li>
 				<li class="mb-1">
 					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
 						data-bs-toggle="collapse" data-bs-target="#data1-collapse" aria-expanded="false">
