--- a/frontend/mystudies.html
+++ b/frontend/mystudies.html
@@ -46,44 +46,27 @@
 			</ul>
 		</div>
 	</nav>
+	
+	<div class="container mt-4 mb-4">
+		<ul id="studies-nav" class="nav nav-tabs">
+			<li class="nav-item">
+				<button class="inside-nav nav-link active" onclick="goToOwnStudies();">Own Studies</button>
+			</li>
+			<li class="nav-item">
+				<button class="inside-nav nav-link" onclick="goToParticipatedStudies();">Participated Studies</button>
+			</li>
+		</ul>
+	</div>
+	
 	<div class="container">
-		<div id="items" class="row">
-			<div class="col-md-4  mt-4">
-				<div class="card">
-					<img src="logo.webp" class="card-img-top" alt="image">
-					<div class="card-body">
-						<h5 class="card-title">Stydy 1</h5>
-						<p class="card-text">The description of the study...</p>
-						<button class="btn btn-primary"">View</button>
-					<button class=" btn btn-danger"">Delete</button>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 mt-4">
-				<div class="card">
-					<img src="logo.webp" class="card-img-top" alt="image">
-					<div class="card-body">
-						<h5 class="card-title">Stydy 2</h5>
-						<p class="card-text">The description of the study...</p>
-						<button class="btn btn-primary"">View</button>
-					  <button class=" btn btn-danger"">Delete</button>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 mt-4">
-				<div class="card">
-					<img src="logo.webp" class="card-img-top" alt="image">
-					<div class="card-body">
-						<h5 class="card-title">Stydy 3</h5>
-						<p class="card-text">The description of the study...</p>
-						<button class="btn btn-primary"">View</button>
-						<button class=" btn btn-danger"">Delete</button>
-					</div>
-				</div>
-			</div>
-		</div>
+		<div id="studies-container" class="row"></div>
 	</div>
 
+	<script>
+		window.onload = function() {
+			goToOwnStudies();
+		};
+	</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
