--- a/frontend/test.html
+++ b/frontend/test.html
@@ -1,57 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show More/Less Text</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .text-content {
-            max-height: 100px; /* Limit the height of the content */
-            overflow: hidden;
-            position: relative;
-        }
-        .show-more {
-            display: none; /* Initially hide the rest of the content */
-        }
-        .show-more-btn {
-            margin-top: 10px;
-        }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <title>Bootstrap Example</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
-    <div class="container mt-5">
-        <div class="card">
-            <div class="card-body">
-                <div class="text-content" id="textContent">
-                    <span class="show-less">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Aenean auctor, lorem vel consectetur scelerisque, sapien dolor accumsan ligula, ac finibus est urna et eros. Duis id cursus eros. Cras vehicula, urna at tristique cursus, nulla erat consectetur orci, ac interdum metus metus nec risus. Vivamus euismod, nunc eu tincidunt hendrerit, nisi nulla malesuada ex, nec blandit arcu ipsum ac risus. Suspendisse potenti. Morbi lacinia ligula nec tortor tempor fermentum. Donec vitae justo vel ex dapibus aliquet. Nullam sed convallis eros. Suspendisse potenti. Cras vehicula felis ut elit ultrices, ut scelerisque magna facilisis. Nam vehicula sapien et nibh ullamcorper, ac facilisis metus luctus. Donec vulputate dolor ut pharetra vehicula.</span>
-                    <span class="show-more"> Sed euismod, sapien vel volutpat commodo, nisl nisi lacinia odio, sit amet pharetra erat sapien vel est. Ut a enim sit amet odio interdum tempor. Nulla facilisi. Cras blandit felis eu magna pulvinar, a bibendum orci fringilla. Mauris vel mauris at lacus fermentum venenatis. Integer ut lacus eget libero sagittis tristique. Vivamus mollis lacus non massa vehicula, at blandit arcu convallis. In vestibulum auctor nunc a fermentum. Maecenas facilisis arcu nec arcu tincidunt, vel tincidunt nisi pulvinar. Ut a euismod sapien, nec pretium arcu. Cras in risus nec nisi dictum facilisis. Morbi congue odio nec libero viverra, ut luctus est consequat. Donec tincidunt nisi in est cursus, non vulputate orci facilisis. Nullam sit amet felis ac nisl viverra vulputate vel a nisi.</span>
-                </div>
-                <button class="btn btn-primary show-more-btn" id="showMoreBtn" onclick="toggleText()">Show More</button>
-            </div>
-        </div>
-    </div>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
-    <script>
-        function toggleText() {
-            const textContent = document.getElementById('textContent');
-            const showMoreBtn = document.getElementById('showMoreBtn');
-            const showLess = textContent.querySelector('.show-less');
-            const showMore = textContent.querySelector('.show-more');
+<body class="p-3 m-0 border-0 bd-example m-0 border-0">
 
-            if (showMore.style.display === 'none') {
-                showMore.style.display = 'inline';
-                showLess.style.display = 'none';
-                showMoreBtn.textContent = 'Show Less';
-                textContent.style.maxHeight = 'none';
-            } else {
-                showMore.style.display = 'none';
-                showLess.style.display = 'inline';
-                showMoreBtn.textContent = 'Show More';
-                textContent.style.maxHeight = '100px';
-            }
-        }
-    </script>
+    <!-- Example Code -->
+
+
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+    </ul>
+
+
+    <!-- End Example Code -->
 </body>
+
 </html>
