data privacy settings completed on front and back

--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -102,14 +102,14 @@
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="files-buttons"></ul>
 					</div>
 				</li>
-				<hr>
+				<hr style="width: 70%;">
 				<li class="mb-1">
 					<button class="btn btn-toggle no-before d-inline-flex align-items-center rounded border-0" onclick="generateUploadButton();">
 						Upload New Data
 					</button>
 				</li>
 				<li class="mb-1">
-					<button style="color:crimson;" class="btn btn-toggle no-before d-inline-flex align-items-center rounded border-0" onclick="generateDataSettings();">
+					<button style="color:crimson;" class="btn btn-toggle no-before d-inline-flex align-items-center rounded border-0" onclick="getDataSettings();">
 						Change Data Settings
 					</button>
 				</li>
