creating studies and retrieving them in front is done

--- a/frontend/create_study.html
+++ b/frontend/create_study.html
@@ -67,7 +67,7 @@
                 <label for="consent-link" class="form-label">Link to the Consent Form</label>
                 <input type="url" class="form-control" id="consent-link" placeholder="Paste the link to the consent form here">
             </div>
-            <button type="submit" class="btn btn-primary btn-block mb-5">Save Changes</button>
+            <button type="submit" class="btn btn-primary btn-block mb-5">Submit</button>
         </form>
     </div>
 
