Inviting users to studies added

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -51,7 +51,7 @@
             </div>
             <br>
             <button type="submit" class="btn btn-primary btn-block">Register</button>
-            <p class="mt-3 text-center">Already have an account? <a href="login.html"">Login here</a></p>
+            <p class="mt-3 text-center">Already have an account? <a href="login.html">Login here</a></p>
         </form>
     </div>
 
