--- a/frontend/login.html
+++ b/frontend/login.html
@@ -47,7 +47,7 @@
             </div>
             <br>
             <button type="submit" class="btn btn-primary btn-block">Login</button>
-            <p class="mt-3 text-center">Don't have an account? <a href="register.html"">Register here</a></p>
+            <p class="mt-3 text-center">Don't have an account? <a href="register.html">Register here</a></p>
         </form>
     </div>
 
