--- a/frontend/study.html
+++ b/frontend/study.html
@@ -43,7 +43,11 @@
             </ul>
         </div>
     </nav>
-    <div class="content-container row justify-content-md-center mt-5">
+    <div class="content-container row justify-content-md-center mt-4">
+        <div class="col-md-9" id="top-navbar">
+        </div>
+    </div>
+    <div class="content-container row justify-content-md-center mt-4">
         <div class="col-md-6">
                 <!-- <br> -->
                 <div id="study-info">
@@ -52,13 +56,7 @@
                 <button id="edit-study" class="btn btn-primary mb-5">Edit Information</button>
         </div>
         <div class="col-md-1"></div>
-        <div class="col-md-2" id="study-side">
-            <h5 class="mt-5">This study was started at:</h5>
-            <div>2024-07-22</div><br><br>
-            <h5>Total number of participans:</h5>
-            <div>100</div><br><br>
-            <button class="btn btn-primary mt-3">Invite a User</button>
-        </div>
+        <div class="col-md-2" id="study-side"></div>
     </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -68,10 +66,8 @@
     <script src="scripts.js"></script>
     <script>
         window.onload = function() {
-			const queryString = window.location.search;
-            const urlParams = new URLSearchParams(queryString);
-            console.log(urlParams);
-            getStudy(urlParams.get('studyId'));
+            // TODO: study_id should be in the url path not as query parameter
+            getStudy(getUrlParam('studyId'), 'study');
 		};
     </script>
 </body>
