--- a/frontend/test.html
+++ b/frontend/test.html
@@ -16,28 +16,12 @@
     </style>
 </head>
 <body>
-    <div class="table-container mt-5 flex-grow-1" id="data-content">
-        <table class="table table-bordered table-striped w-50">
-            <thead>
-                <tr>
-                    <th>Data</th>
-                    <th>Privacy</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Sleep</td>
-                    <td class="d-flex justify-content-between align-items-center">
-                        <div class="center-span">
-                            <span>Public</span>
-                        </div>
-                        <button class="btn btn-danger btn-sm">Change</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
+    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Library</li>
+        </ol>
+      </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
