--- a/frontend/study.html
+++ b/frontend/study.html
@@ -36,8 +36,9 @@
                     <a class="nav-link" href="about_us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="profile.html">
+                    <a class="nav-link position-relative" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
+						<span class="badge bg-danger badge-notification"></span>
                     </a>
                 </li>
             </ul>
@@ -52,8 +53,7 @@
                 <!-- <br> -->
                 <div id="study-info">
                 </div>
-                <br>
-                <button id="edit-study" class="btn btn-primary mb-5">Edit Information</button>
+                
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-2" id="study-side"></div>
