--- a/frontend/about_us.html
+++ b/frontend/about_us.html
@@ -40,8 +40,9 @@
                     <a class="nav-link active" href="about_us.html">About Us</a>
                 </li>
                 <li class="nav-item" id="navbar-profile">
-                    <a class="nav-link" href="profile.html">
+                    <a class="nav-link position-relative" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
+						<span class="badge bg-danger badge-notification"></span>
                     </a>
                 </li>
             </ul>
@@ -54,6 +55,7 @@
     <script>
         window.addEventListener("load", function() {
             getAboutUs();
+            getMessages();
         });
     </script>
     <script src="scripts.js"></script>
