--- a/frontend/create_study.html
+++ b/frontend/create_study.html
@@ -38,8 +38,9 @@
                     <a class="nav-link" href="about_us.html">About Us</a>
                 </li>
 				<li class="nav-item">
-					<a class="nav-link" href="profile.html">
+					<a class="nav-link position-relative" href="profile.html">
 						<img src="profile.png" style="height: 30px;">
+						<span class="badge bg-danger badge-notification"></span>
 					</a>
 				</li>
 			</ul>
@@ -73,6 +74,10 @@
 
     <script src="scripts.js"></script>
     <script>
+        window.onload = function() {
+            getMessages();
+		};
+
         document.getElementById("create-study-form").addEventListener("submit", function(event) {
             event.preventDefault();
             submitNewStudy();
