--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -53,7 +53,7 @@
                 <li class="nav-item" id="navbar-profile">
                     <a class="nav-link position-relative" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
-						<span class="badge bg-danger badge-notification">4</span>
+						<span class="badge bg-danger badge-notification"></span>
                     </a>
                 </li>
             </ul>
@@ -114,6 +114,7 @@
     <script>
         window.addEventListener("load", function() {
             getHomepage();
+            getMessages();
         });
 
 
