--- a/frontend/invite_user.html
+++ b/frontend/invite_user.html
@@ -38,8 +38,9 @@
                     <a class="nav-link" href="about_us.html">About Us</a>
                 </li>
 				<li class="nav-item">
-					<a class="nav-link" href="profile.html">
+					<a class="nav-link position-relative" href="profile.html">
 						<img src="profile.png" style="height: 30px;">
+						<span class="badge bg-danger badge-notification"></span>
 					</a>
 				</li>
 			</ul>
@@ -62,6 +63,7 @@
             // TODO: study_id should be in the url path not as query parameter
             getStudy(getUrlParam('studyId'), 'invite');
             generateHtmlInviteUsername();
+            getMessages();
 		};
 
         document.getElementById("invite-user-form").addEventListener("submit", function(event) {
