--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -41,8 +41,9 @@
                     <a class="nav-link" href="about_us.html">About Us</a>
                 </li>
 				<li class="nav-item">
-					<a class="nav-link" href="profile.html">
+					<a class="nav-link position-relative" href="profile.html">
 						<img src="profile.png" style="height: 30px;">
+						<span class="badge bg-danger badge-notification"></span>
 					</a>
 				</li>
 			</ul>
@@ -121,6 +122,7 @@
 	<script>
 		window.addEventListener("load", function() {
             getMyData();
+            getMessages();
         });
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
