--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -38,7 +37,7 @@
                 <li class="nav-item">
                     <a class="nav-link position-relative" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
-						<span class="badge bg-danger badge-notification">...</span>
+						<span class="badge bg-danger badge-notification"></span>
                     </a>
                 </li>
             </ul>
@@ -62,55 +61,27 @@
 
         <div id="message-icon" class="col-md-4">
             <div class="text-end mt-3">
-                <span class="position-relative" onclick="toggleMessagesDisplay();">
+                <button class="position-relative" onclick="toggleMessagesDisplay();" style="border: none; background-color: white;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                         <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
                     </svg>
-                    <span class="badge bg-danger badge-messages">2</span>
-                </span>
+                    <span class="badge bg-danger badge-messages"></span>
+                </button>
             </div>
-            <div class="messages-container">
+            <div class="messages-container" id="messages-container">
                 <ul class="list-group">
-                    <li class="list-group-item p-3">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-3">Invited to the study:<br>"Sleep Recovery"</h5>
-                            <small class="mt-1">3 days ago</small>
-                          </div>
-                          <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae libero aliquam, molestie enim eu, &nbsp;&nbsp;<a href="#">view more > </a></p>
-                          <button class="btn btn-success btn-sm">accept</button>
-                          <button class="btn btn-danger btn-sm">reject</button>
-                    </li>
-                    <li class="list-group-item p-3">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-3">Invited to the study:<br>"Sleep Recovery"</h5>
-                            <small class="mt-1">3 days ago</small>
-                          </div>
-                          <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae libero aliquam, molestie enim eu, &nbsp;&nbsp;<a href="#">view more > </a></p>
-                          <button class="btn btn-success btn-sm">accept</button>
-                          <button class="btn btn-danger btn-sm">reject</button>
-                    </li>
-                    <li class="list-group-item p-3">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-3">Invited to the study:<br>"Sleep Recovery"</h5>
-                            <small class="mt-1">3 days ago</small>
-                          </div>
-                          <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae libero aliquam, molestie enim eu, &nbsp;&nbsp;<a href="#">view more > </a></p>
-                          <button class="btn btn-success btn-sm">accept</button>
-                          <button class="btn btn-danger btn-sm">reject</button>
-                    </li>
-                  </ul>
+                    
+                </ul>
             </div>
         </div>
     </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> -->
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
     <script>
         window.addEventListener("load", function() {
             getProfile('profile page');
+            getMessages('profile page');
         });
         
         document.getElementById("editProfile").addEventListener("click", function() { window.location.href = "edit_profile.html"; });
