floating chatbot UI added

--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -97,7 +97,7 @@
 				<li class="mb-1">
 					<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
 						data-bs-toggle="collapse" data-bs-target="#data5-collapse" aria-expanded="false">
-						Data Files
+						Uploaded Files
 					</button>
 					<div class="collapse" id="data5-collapse">
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="files-buttons"></ul>
