--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -7,6 +7,8 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="chatbot_styles.css">
     <link rel="stylesheet" href="style.css">
     <style>
         .chart-container {
@@ -110,7 +112,39 @@
         </div>
     </div>
 
+    <div class="floating-chat">
+        <div class="robot-icon">
+            <img src="robot-icon.png" alt="Chat Icon" width="60" height="60">
+        </div>
+        <div class="chat">
+            <div class="header">
+                <span class="title">SleepVention Chatbot</span>
+                <button><i class="fa fa-times" aria-hidden="true"></i></button>
+            </div>
+            <ul class="messages">
+                <li class="other">
+                    <img src="robot-icon.png" alt="Other Avatar">
+                    <p>Hello! I am SleepVention chatbot, how can I help you?</p>
+                </li>
+                <li class="self">
+                    <p class="self">I have a question.</p>
+                </li>
+                <li class="other">
+                    <img src="robot-icon.png" alt="Other Avatar">
+                    <p>Sure! What is it?</p>
+                </li>
+            </ul>
+            <div class="footer">
+                <div class="text-box" contenteditable="true" disabled="true"></div>
+                <button id="sendMessage">send</button>
+            </div>
+        </div>
+    </div>
+
+
     <script src="scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="chatbot_scripts.js"></script>
     <script>
         window.addEventListener("load", function() {
             getHomepage();
