--- a/frontend/test.html
+++ b/frontend/test.html
@@ -1,256 +1,339 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chatbot Example</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
-        .chart-container {
-            height: 40vh;
-            width: auto;
+        /* CSS (converted from SCSS) */
+        @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+
+        body {
+            background: white;
+            font: 12px/16px 'Noto Sans', sans-serif;
         }
 
-        .chart-wrapper {
-            margin-top: 70px;
-            margin-bottom: 170px;
-        }
-
-        .notification-icon {
+        .floating-chat {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: black;
             position: fixed;
-            top: 80px; /* Adjust this value as needed */
-            right: 20px;
-            font-size: 1.5rem;
-            color: #dc3545;
-        }
-
-        .badge-envelope {
-            position: absolute;
-            top: -10px;
-            right: -10px;
-            font-size: 0.75rem;
-            background-color: #dc3545;
-            color: white;
+            bottom: 70px;
+            right: 70px;
+            width: 60px;
+            height: 60px;
+            font-size: 24px;
+            transform: translateY(70px);
+            transition: all 250ms ease-out;
             border-radius: 50%;
-            padding: 0.3em 0.5em;
+            background: -moz-linear-gradient(-45deg, #d7e9fc 0, #d7e9fc 25%, #c9e2fb 50%, #bcdcfd 75%, #bcdcfd 100%);
+            background: -webkit-linear-gradient(-45deg, #d7e9fc 0, #d7e9fc 25%, #c9e2fb 50%, #bcdcfd 75%, #bcdcfd 100%);
+            opacity: 0;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
-        .notification-wrapper {
+        .floating-chat.enter:hover {
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+            opacity: 1;
+        }
+
+        .floating-chat.enter {
+            transform: translateY(0);
+            opacity: 0.6;
+            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.14);
+        }
+
+        .floating-chat.expand {
+            background: -moz-linear-gradient(-45deg, #F4F4F4 0, #F4F4F4 25%, #fdfaf4 50%, #e7ebef 75%, #e7ebef 100%);
+            background: -webkit-linear-gradient(-45deg, #F4F4F4 0, #F4F4F4 25%, #fdfaf4 50%, #e7ebef 75%, #e7ebef 100%);
+            width: 250px;
+            max-height: 400px;
+            height: 400px;
+            border-radius: 5px;
+            cursor: auto;
+            opacity: 1;
+        }
+
+        .floating-chat button {
+            background: transparent;
+            border: 0;
+            color: black;
+            text-transform: uppercase;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+
+        .chat {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            opacity: 0;
+            width: 1px;
+            height: 1px;
+            border-radius: 50%;
+            transition: all 250ms ease-out;
+            margin: auto;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+
+        .chat.enter {
+            opacity: 1;
+            border-radius: 0;
+            margin: 10px;
+            width: auto;
+            height: auto;
+        }
+
+        .header {
+            flex-shrink: 0;
+            padding-bottom: 10px;
+            display: flex;
+            background: transparent;
+        }
+
+        .header .title {
+            font-size: 14px;
+            flex-grow: 1;
+            flex-shrink: 1;
+            padding: 0 5px;
+        }
+
+        .messages {
+            padding: 10px;
+            margin: 0;
+            list-style: none;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            flex-grow: 1;
+            border-radius: 4px;
+            /* background: #f8f9fa; */
+        }
+
+        .messages::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        .messages::-webkit-scrollbar-track {
+            border-radius: 5px;
+            background-color: rgba(25, 147, 147, 0.1);
+        }
+
+        .messages::-webkit-scrollbar-thumb {
+            border-radius: 5px;
+            background-color: rgba(25, 147, 147, 0.2);
+        }
+
+        .messages li {
             position: relative;
-            display: inline-block;
+            clear: both;
+            display: flex;
+            align-items: center;
+            padding: 14px;
+            margin: 0 0 20px 0;
+            font: 12px/16px 'Noto Sans', sans-serif;
+            border-radius: 10px;
+            background-color: #E7EBDA;
+            word-wrap: break-word;
+            max-width: 81%;
+        }
+
+        .messages li.other {
+            animation: show-chat-odd 0.15s 1 ease-in;
+            float: left;
+            /* margin-right: 45px; */
+            color: black;
+        }
+        
+        .messages li.self {
+            animation: show-chat-even 0.15s 1 ease-in;
+            float: right;
+            /* margin-left: 75px; */
+            color: #2a05a3;
+        }
+
+        .messages li img {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+
+        .footer {
+            flex-shrink: 0;
+            display: flex;
+            padding-top: 10px;
+            max-height: 90px;
+            background: transparent;
+        }
+
+        .footer .text-box {
+            border-radius: 3px;
+            background: #E7EBDA;
+            min-height: 100%;
+            width: 100%;
+            margin-right: 5px;
+            color: #2a05a3;
+            overflow-y: auto;
+            padding: 2px 5px;
+            font-size: 12px;
+        }
+
+        .footer .text-box::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        .footer .text-box::-webkit-scrollbar-track {
+            border-radius: 5px;
+            background-color: rgba(25, 147, 147, 0.1);
+        }
+
+        .footer .text-box::-webkit-scrollbar-thumb {
+            border-radius: 5px;
+            background-color: rgba(25, 147, 147, 0.2);
+        }
+
+        @keyframes show-chat-even {
+            0% {
+                margin-left: -480px;
+            }
+
+            100% {
+                margin-left: 0;
+            }
+        }
+
+        @keyframes show-chat-odd {
+            0% {
+                margin-right: -480px;
+            }
+
+            100% {
+                margin-right: 0;
+            }
         }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light">
-        <a class="navbar-brand position-relative" href="homepage.html">
-            <img src="logo.png" alt="Logo" style="height: 30px;">
-            <span class="badge bg-danger badge-notification"></span>
-        </a>
-        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item" id="navbar-data">
-                    <a class="nav-link" href="mydata.html">My Data</a>
+    <div class="floating-chat">
+        <div class="robot-icon">
+            <img src="robot-icon.svg" alt="Chat Icon" width="32" height="32">
+        </div>
+        <div class="chat">
+            <div class="header">
+                <span class="title">SleepVention Chatbot</span>
+                <button><i class="fa fa-times" aria-hidden="true"></i></button>
+            </div>
+            <ul class="messages">
+                <li class="other">
+                    <img src="profile.png" alt="Other Avatar">
+                    Hello! I am SleepVention chatbot, how can I help you?
                 </li>
-                <li class="nav-item" id="navbar-studies">
-                    <a class="nav-link" href="mystudies.html">My Studies</a>
+                <li class="self">
+                    I have a question.
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="explore.html">Explore</a>
+                <li class="other">
+                    <img src="profile.png" alt="Other Avatar">
+                    Sure! What is it?
                 </li>
             </ul>
-            <ul class="navbar-nav d-flex justify-content-between">
-                <li class="nav-item" id="navbar-login">
-                    <button class="btn btn-link nav-link" id="logout-button" onclick="logOut();">Log Out</button>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about_us.html">About Us</a>
-                </li>
-                <li class="nav-item" id="navbar-profile">
-                    <a class="nav-link" href="profile.html">
-                        <img src="profile.png" style="height: 30px;">
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Notification Icon -->
-    <div class="notification-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-			<path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
-		  </svg>
-    </div>
-
-    <div class="container mt-5">
-        <h2 class="mb-4 text-center">Sleep Data Dashboard</h2>
-
-        <div class="row chart-wrapper justify-content-center text-center">
-            <div class="col-md-10 col-lg-8">
-                <div class="justify-content-center">
-                    <canvas id="sleepHoursChart"></canvas>
-                </div>
-            </div>
-            <div class="text-center mt-3">
-                <p>
-                    This graph shows the average hours of sleep per night over the
-                    past month. The data indicates fluctuations in sleep patterns,
-                    highlighting the importance of maintaining a consistent sleep
-                    schedule.
-                </p>
-            </div>
-        </div>
-
-        <div class="row chart-wrapper justify-content-center text-center">
-            <div class="col-md-10 col-lg-8">
-                <div class="justify-content-center">
-                    <canvas id="sleepQualityChart"></canvas>
-                </div>
-            </div>
-            <div class="text-center mt-3">
-                <p>
-                    This graph illustrates the quality of sleep on a scale of 1 to 10
-                    over the past month. It shows how different factors such as
-                    stress, diet, and exercise can impact sleep quality.
-                </p>
-            </div>
-        </div>
-
-        <div class="row chart-wrapper justify-content-center text-center">
-            <div class="col-md-10 col-lg-8">
-                <div class="justify-content-center">
-                    <canvas id="bedtimeChart"></canvas>
-                </div>
-            </div>
-            <div class="text-center mt-3">
-                <p>
-                    This graph represents the average bedtime over the past month. It
-                    emphasizes the benefits of going to bed at a regular time each
-                    night to improve overall sleep quality.
-                </p>
+            <div class="footer">
+                <div class="text-box" contenteditable="true" disabled="true"></div>
+                <button id="sendMessage">send</button>
             </div>
         </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        window.addEventListener("load", function() {
-            getHomepage();
-        });
+        var element = $('.floating-chat');
+        var myStorage = localStorage;
 
-        // Data for Sleep Hours Chart
-        const sleepHoursData = {
-            labels: ["Week 1", "Week 2", "Week 3", "Week 4"],
-            datasets: [
-                {
-                    label: "Average Sleep Hours",
-                    data: [7.5, 6.8, 7.2, 7.0],
-                    backgroundColor: "rgba(54, 162, 235, 0.2)",
-                    borderColor: "rgba(54, 162, 235, 1)",
-                    borderWidth: 1,
-                },
-            ],
-        };
+        if (!myStorage.getItem('chatID')) {
+            myStorage.setItem('chatID', createUUID());
+        }
 
-        // Data for Sleep Quality Chart
-        const sleepQualityData = {
-            labels: ["Day 1", "Day 2", "Day 3", "Day 4", "Day 5", "Day 6", "Day 7"],
-            datasets: [
-                {
-                    label: "Sleep Quality (1-10)",
-                    data: [7, 6, 8, 7, 5, 6, 7],
-                    backgroundColor: "rgba(75, 192, 192, 0.2)",
-                    borderColor: "rgba(75, 192, 192, 1)",
-                    borderWidth: 1,
-                },
-            ],
-        };
+        setTimeout(function () {
+            element.addClass('enter');
+        }, 1000);
 
-        // Data for Bedtime Chart
-        const bedtimeData = {
-            labels: ["Week 1", "Week 2", "Week 3", "Week 4"],
-            datasets: [
-                {
-                    label: "Average Bedtime",
-                    data: [22, 22.5, 23, 22],
-                    backgroundColor: "rgba(153, 102, 255, 0.2)",
-                    borderColor: "rgba(153, 102, 255, 1)",
-                    borderWidth: 1,
-                },
-            ],
-        };
+        element.click(openElement);
 
-        // Configuration for Sleep Hours Chart
-        const sleepHoursConfig = {
-            type: "line",
-            data: sleepHoursData,
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        display: true,
-                        position: "top",
-                    },
-                },
-            },
-        };
+        function openElement() {
+            var messages = element.find('.messages');
+            var textInput = element.find('.text-box');
+            element.find('.robot-icon').hide();
+            element.addClass('expand');
+            element.find('.chat').addClass('enter');
+            textInput.keydown(onMetaAndEnter).prop("disabled", false).focus();
+            element.off('click', openElement);
+            element.find('.header button').click(closeElement);
+            element.find('#sendMessage').click(sendNewMessage);
+            messages.scrollTop(messages.prop("scrollHeight"));
+        }
 
-        // Configuration for Sleep Quality Chart
-        const sleepQualityConfig = {
-            type: "bar",
-            data: sleepQualityData,
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        display: true,
-                        position: "top",
-                    },
-                },
-            },
-        };
+        function closeElement() {
+            element.find('.chat').removeClass('enter').hide();
+            element.find('.robot-icon').show();
+            element.removeClass('expand');
+            element.find('.header button').off('click', closeElement);
+            element.find('#sendMessage').off('click', sendNewMessage);
+            element.find('.text-box').off('keydown', onMetaAndEnter).prop("disabled", true).blur();
+            setTimeout(function () {
+                element.find('.chat').removeClass('enter').show()
+                element.click(openElement);
+            }, 500);
+        }
 
-        // Configuration for Bedtime Chart
-        const bedtimeConfig = {
-            type: "line",
-            data: bedtimeData,
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        display: true,
-                        position: "top",
-                    },
-                },
-            },
-        };
+        function createUUID() {
+            var s = [];
+            var hexDigits = "0123456789abcdef";
+            for (var i = 0; i < 36; i++) {
+                s[i] = hexDigits.substr(Math.floor(Math.random() * 0x10), 1);
+            }
+            s[14] = "4";
+            s[19] = hexDigits.substr((s[19] & 0x3) | 0x8, 1);
+            s[8] = s[13] = s[18] = s[23] = "-";
+            var uuid = s.join("");
+            return uuid;
+        }
 
-        // Render Charts
-        window.onload = function () {
-            const sleepHoursCtx = document
-                .getElementById("sleepHoursChart")
-                .getContext("2d");
-            new Chart(sleepHoursCtx, sleepHoursConfig);
+        function sendNewMessage() {
+            var userInput = $('.text-box');
+            var newMessage = userInput.html().replace(/<div>|<br.*?>/ig, '\n').replace(/<\/div>/g, '').trim().replace(/\n/g, '<br>');
 
-            const sleepQualityCtx = document
-                .getElementById("sleepQualityChart")
-                .getContext("2d");
-            new Chart(sleepQualityCtx, sleepQualityConfig);
+            if (!newMessage) return;
 
-            const bedtimeCtx = document
-                .getElementById("bedtimeChart")
-                .getContext("2d");
-            new Chart(bedtimeCtx, bedtimeConfig);
-        };
+            var messagesContainer = $('.messages');
+
+            messagesContainer.append([
+                '<li class="self">',
+                    newMessage,
+                '</li>'
+            ].join(''));
+
+            userInput.html('');
+            userInput.focus();
+
+            messagesContainer.finish().animate({
+                scrollTop: messagesContainer.prop("scrollHeight")
+            }, 250);
+        }
+
+        function onMetaAndEnter(event) {
+            if ((event.metaKey || event.ctrlKey) && event.keyCode == 13) {
+                sendNewMessage();
+            }
+        }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
