--- a/frontend/html/about_us.html
+++ b/frontend/html/about_us.html
@@ -8,13 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/general_styles.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="homepage.html">
-            <img src="logo.png" alt="Logo" style="height: 30px" />
+            <img src="../images/logo.png" alt="Logo" style="height: 30px" />
         </a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
                 </li>
                 <li class="nav-item" id="navbar-profile">
                     <a class="nav-link position-relative" href="profile.html">
-                        <img src="profile.png" style="height: 30px;">
+                        <img src="../images/profile.png" style="height: 30px;">
 						<span class="badge bg-danger badge-notification"></span>
                     </a>
                 </li>
@@ -58,7 +58,7 @@
             getMessages();
         });
     </script>
-    <script src="scripts.js"></script>
+    <script src="../scripts/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
 </body>
