--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="chatbot_styles.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/chatbot_styles.css">
+    <link rel="stylesheet" href="../css/general_styles.css">
     <style>
         .chart-container {
             height: 40vh;
@@ -26,7 +26,7 @@
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
         <a class="navbar-brand position-relative" href="homepage.html">
-            <img src="logo.png" alt="Logo" style="height: 30px;">
+            <img src="../images/logo.png" alt="Logo" style="height: 30px;">
             
         </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -54,7 +54,7 @@
                 </li>
                 <li class="nav-item" id="navbar-profile">
                     <a class="nav-link position-relative" href="profile.html">
-                        <img src="profile.png" style="height: 30px;">
+                        <img src="../images/profile.png" style="height: 30px;">
 						<span class="badge bg-danger badge-notification"></span>
                     </a>
                 </li>
@@ -114,7 +114,7 @@
 
     <div class="floating-chat">
         <div class="robot-icon">
-            <img src="robot-icon.png" alt="Chat Icon" width="60" height="60">
+            <img src="../images/robot-icon.png" alt="Chat Icon" width="60" height="60">
         </div>
         <div class="chat">
             <div class="header">
@@ -123,14 +123,14 @@
             </div>
             <ul class="messages">
                 <li class="other">
-                    <img src="robot-icon.png" alt="Other Avatar">
+                    <img src="../images/robot-icon.png" alt="Other Avatar">
                     <p>Hello! I am SleepVention chatbot, how can I help you?</p>
                 </li>
                 <li class="self">
                     <p class="self">I have a question.</p>
                 </li>
                 <li class="other">
-                    <img src="robot-icon.png" alt="Other Avatar">
+                    <img src="../images/robot-icon.png" alt="Other Avatar">
                     <p>Sure! What is it?</p>
                 </li>
             </ul>
@@ -142,9 +142,9 @@
     </div>
 
 
-    <script src="scripts.js"></script>
+    <script src="../scripts/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="chatbot_scripts.js"></script>
+    <script src="../scripts/chatbot_scripts.js"></script>
     <script>
         window.addEventListener("load", function() {
             getHomepage();
