--- a/frontend/html/mystudies.html
+++ b/frontend/html/mystudies.html
@@ -7,13 +7,13 @@
 	<title>My Studies</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
-	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/general_styles.css">
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
 		<a class="navbar-brand" href="homepage.html">
-            <img src="logo.png" alt="Logo" style="height: 30px" />
+            <img src="../images/logo.png" alt="Logo" style="height: 30px" />
 		</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +40,7 @@
                 </li>
 				<li class="nav-item">
 					<a class="nav-link position-relative" href="profile.html">
-						<img src="profile.png" style="height: 30px;">
+                        <img src="../images/profile.png" style="height: 30px;">
 						<span class="badge bg-danger badge-notification"></span>
 					</a>
 				</li>
@@ -80,7 +80,7 @@
 	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> -->
 	<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
-	<script src="scripts.js"></script>
+    <script src="../scripts/scripts.js"></script>
 </body>
 
 </html>
