--- a/frontend/html/profile.html
+++ b/frontend/html/profile.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/general_styles.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="homepage.html">
-            <img src="logo.png" alt="Logo" style="height: 30px" />
+            <img src="../images/logo.png" alt="Logo" style="height: 30px" />
         </a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link position-relative" href="profile.html">
-                        <img src="profile.png" style="height: 30px;">
+                        <img src="../images/profile.png" style="height: 30px;">
 						<span class="badge bg-danger badge-notification"></span>
                     </a>
                 </li>
@@ -47,7 +47,7 @@
     <div class="row" style="width: 100%;">
         <div class="col-md-8">
             <div class="info-container m-5">
-                <img style="max-height: 300px; max-width: 450px;" src="profile.avif" class="card-img-top" alt="profile">
+                <img style="max-height: 300px; width: 100%;" src="../images/profile.avif" class="card-img-top" alt="profile">
                 <div class="card-body">
                     <!-- <br> -->
                     <div id="profileInfo"></div>
@@ -77,7 +77,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="scripts.js"></script>
+    <script src="../scripts/scripts.js"></script>
     <script>
         window.addEventListener("load", function() {
             getProfile('profile page');
