--- a/frontend/html/test.html
+++ b/frontend/html/test.html
@@ -1,4 +1,13 @@
-/* CSS (converted from SCSS) */
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chatbot Example</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        /* CSS (converted from SCSS) */
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
 
 .floating-chat {
@@ -214,3 +223,121 @@
         margin-right: 0;
     }
 }
+    </style>
+</head>
+
+<body>
+    <div class="floating-chat">
+        <div class="robot-icon">
+            <img src="robot-icon.png" alt="Chat Icon" width="60" height="60">
+        </div>
+        <div class="chat">
+            <div class="header">
+                <span class="title">SleepVention Chatbot</span>
+                <button><i class="fa fa-times" aria-hidden="true"></i></button>
+            </div>
+            <ul class="messages">
+                <li class="other">
+                    <img src="robot-icon.png" alt="Other Avatar">
+                    <p>Hello! I am SleepVention chatbot, how can I help you?</p>
+                </li>
+                <li class="self">
+                    <p class="self">I have a question.</p>
+                </li>
+                <li class="other">
+                    <img src="robot-icon.png" alt="Other Avatar">
+                    <p>Sure! What is it?</p>
+                </li>
+            </ul>
+            <div class="footer">
+                <div class="text-box" contenteditable="true" disabled="true"></div>
+                <button id="sendMessage">send</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        var element = $('.floating-chat');
+var myStorage = localStorage;
+
+if (!myStorage.getItem('chatID')) {
+    myStorage.setItem('chatID', createUUID());
+}
+
+setTimeout(function () {
+    element.addClass('enter');
+}, 1000);
+
+element.click(openElement);
+
+function openElement() {
+    var messages = element.find('.messages');
+    var textInput = element.find('.text-box');
+    element.find('.robot-icon').hide();
+    element.addClass('expand');
+    element.find('.chat').addClass('enter');
+    textInput.keydown(onMetaAndEnter).prop("disabled", false).focus();
+    element.off('click', openElement);
+    element.find('.header button').click(closeElement);
+    element.find('#sendMessage').click(sendNewMessage);
+    messages.scrollTop(messages.prop("scrollHeight"));
+}
+
+function closeElement() {
+    element.find('.chat').removeClass('enter').hide();
+    element.find('.robot-icon').show();
+    element.removeClass('expand');
+    element.find('.header button').off('click', closeElement);
+    element.find('#sendMessage').off('click', sendNewMessage);
+    element.find('.text-box').off('keydown', onMetaAndEnter).prop("disabled", true).blur();
+    setTimeout(function () {
+        element.find('.chat').removeClass('enter').show()
+        element.click(openElement);
+    }, 500);
+}
+
+function createUUID() {
+    var s = [];
+    var hexDigits = "0123456789abcdef";
+    for (var i = 0; i < 36; i++) {
+        s[i] = hexDigits.substr(Math.floor(Math.random() * 0x10), 1);
+    }
+    s[14] = "4";
+    s[19] = hexDigits.substr((s[19] & 0x3) | 0x8, 1);
+    s[8] = s[13] = s[18] = s[23] = "-";
+    var uuid = s.join("");
+    return uuid;
+}
+
+function sendNewMessage() {
+    var userInput = $('.text-box');
+    var newMessage = userInput.html().replace(/<div>|<br.*?>/ig, '\n').replace(/<\/div>/g, '').trim().replace(/\n/g, '<br>');
+
+    if (!newMessage) return;
+
+    var messagesContainer = $('.messages');
+
+    messagesContainer.append([
+        '<li class="self"><p>',
+            newMessage,
+        '</p></li>'
+    ].join(''));
+
+    userInput.html('');
+    userInput.focus();
+
+    messagesContainer.finish().animate({
+        scrollTop: messagesContainer.prop("scrollHeight")
+    }, 250);
+}
+
+function onMetaAndEnter(event) {
+    if ((event.metaKey || event.ctrlKey) && event.keyCode == 13) {
+        sendNewMessage();
+    }
+}
+    </script>
+</body>
+
+</html>
