download data demo added

--- a/frontend/html/mydata.html
+++ b/frontend/html/mydata.html
@@ -116,7 +116,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="table-container mt-5 flex-grow-1" id="data-content">
+		<div class="table-container mt-5 me-5 flex-grow-1" id="data-content">
 		</div>
 	</main>
 	<script>
