--- a/frontend/html/study.html
+++ b/frontend/html/study.html
@@ -68,6 +68,7 @@
         window.onload = function() {
             // TODO: study_id should be in the url path not as query parameter
             getStudy(getUrlParam('studyId'), 'study');
+            getMessages();
 		};
     </script>
 </body>
