--- a/backend/frontend/html/create_study.html
+++ b/backend/frontend/html/create_study.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invite User</title>
+    <title>Create Study</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/general_styles.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
-		<a class="navbar-brand" href="homepage.html">
+		<a class="navbar-brand" href="/homepage">
             <img src="../images/logo.png" alt="Logo" style="height: 30px" />
 		</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -21,13 +21,13 @@
 		<div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="mydata.html">My Data</a>
+					<a class="nav-link" href="/mydata">My Data</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" href="mystudies.html">My Studies</a>
+					<a class="nav-link active" href="/mystudies">My Studies</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="explore.html">Explore</a>
+					<a class="nav-link" href="/explore">Explore</a>
 				</li>
 			</ul>
 			<ul class="navbar-nav d-flex justify-content-between">
@@ -35,10 +35,10 @@
                     <button class="btn btn-link nav-link" id="logout-button" onclick="logOut();">Log Out</button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about_us.html">About Us</a>
+                    <a class="nav-link" href="/about_us">About Us</a>
                 </li>
 				<li class="nav-item">
-					<a class="nav-link position-relative" href="profile.html">
+					<a class="nav-link position-relative" href="/profile">
                         <img src="../images/profile.png" style="height: 30px;">
 						<span class="badge bg-danger badge-notification"></span>
 					</a>
@@ -46,32 +46,46 @@
 			</ul>
 		</div>
 	</nav>
-	
-    <div class="content-container row justify-content-md-center mt-4">
-        <div class="col-md-9" id="top-navbar">
-        </div>
-    </div>
-
     <div class="form-container container">
-        <h2 class="text-center mb-5">Invite a User</h2>
-        <form id="invite-user-form" class="row"></form>
+        <h2 class="text-center mb-4">Create a Study</h2>
+        <form id="create-study-form">
+            <div class="mb-3">
+                <label for="name" class="form-label">Study Name</label>
+                <input type="text" class="form-control" id="name">
+            </div>
+            <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea rows="4" class="form-control" id="description"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="type" class="form-label">Study Type</label>
+                <select class="form-select" id="type">
+                    <option value="Public">Public</option>
+                    <option value="Private">Private</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="consent-link" class="form-label">Link to the Consent Form</label>
+                <input type="url" class="form-control" id="consent-link" placeholder="Paste the link to the consent form here">
+            </div>
+            <button type="submit" class="btn btn-primary btn-block mb-5">Submit</button>
+        </form>
     </div>
 
     <script src="../scripts/scripts.js"></script>
     <script>
         window.onload = function() {
-            // TODO: study_id should be in the url path not as query parameter
-            getStudy(getUrlParam('studyId'), 'invite');
-            generateHtmlInviteUsername();
             getMessages();
 		};
 
-        document.getElementById("invite-user-form").addEventListener("submit", function(event) {
+        document.getElementById("create-study-form").addEventListener("submit", function(event) {
             event.preventDefault();
-            submitUserInvitation();
+            submitNewStudy();
         });
     </script>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
 </body>
 
