--- a/backend/frontend/html/edit_profile.html
+++ b/backend/frontend/html/edit_profile.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
-		<a class="navbar-brand" href="homepage.html">
+		<a class="navbar-brand" href="http://127.0.0.1:8000/homepage">
             <img src="../images/logo.png" alt="Logo" style="height: 30px" />
 		</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -21,13 +21,13 @@
 		<div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="mydata.html">My Data</a>
+					<a class="nav-link" href="http://127.0.0.1:8000/mydata">My Data</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="mystudies.html">My Studies</a>
+					<a class="nav-link" href="http://127.0.0.1:8000/mystudies">My Studies</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="explore.html">Explore</a>
+					<a class="nav-link" href="http://127.0.0.1:8000/explore">Explore</a>
 				</li>
 			</ul>
 			<ul class="navbar-nav d-flex justify-content-between">
@@ -35,10 +35,10 @@
                     <button class="btn btn-link nav-link" id="logout-button" onclick="logOut();">Log Out</button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about_us.html">About Us</a>
+                    <a class="nav-link" href="http://127.0.0.1:8000/about_us">About Us</a>
                 </li>
 				<li class="nav-item">
-					<a class="nav-link position-relative" href="profile.html">
+					<a class="nav-link position-relative" href="http://127.0.0.1:8000/profile">
                         <img src="../images/profile.png" style="height: 30px;">
 						<span class="badge bg-danger badge-notification"></span>
 					</a>
