--- a/backend/frontend/html/homepage.html
+++ b/backend/frontend/html/homepage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
-		<a class="navbar-brand" href="homepage.html">
+		<a class="navbar-brand" href="/homepage">
             <img src="../images/logo.png" alt="Logo" style="height: 30px" />
 		</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -23,13 +23,13 @@
 		<div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
 			<ul class="navbar-nav">
                 <li class="nav-item" id="navbar-data">
-                    <a class="nav-link" href="mydata.html">My Data</a>
+                    <a class="nav-link" href="/mydata">My Data</a>
                 </li>
                 <li class="nav-item" id="navbar-studies">
-                    <a class="nav-link" href="mystudies.html">My Studies</a>
+                    <a class="nav-link" href="/mystudies">My Studies</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="explore.html">Explore</a>
+                    <a class="nav-link" href="/explore">Explore</a>
                 </li>
             </ul>
             <ul class="navbar-nav d-flex justify-content-between">
@@ -37,10 +37,10 @@
                     <button class="btn btn-link nav-link" id="logout-button" onclick="logOut();">Log Out</button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about_us.html">About Us</a>
+                    <a class="nav-link" href="/about_us">About Us</a>
                 </li>
                 <li class="nav-item" id="navbar-profile">
-                    <a class="nav-link position-relative" href="profile.html">
+                    <a class="nav-link position-relative" href="/profile">
                         <img src="../images/profile.png" style="height: 30px;">
 						<span class="badge bg-danger badge-notification"></span>
                     </a>
