--- a/backend/frontend/html/login.html
+++ b/backend/frontend/html/login.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <title>Register</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../css/general_styles.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
-		<a class="navbar-brand" href="homepage.html">
+		<a class="navbar-brand" href="/homepage">
             <img src="../images/logo.png" alt="Logo" style="height: 30px" />
 		</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -21,47 +21,43 @@
 		<div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="explore.html">Explore</a>
+					<a class="nav-link" href="/explore">Explore</a>
 				</li>
 			</ul>
 			<ul class="navbar-nav d-flex justify-content-between">
                 <li class="nav-item">
-                    <a class="nav-link active" href="login.html">Log In</a>
+                    <a class="nav-link active" href="/login">Log In</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about_us.html">About Us</a>
+                    <a class="nav-link" href="/about_us">About Us</a>
                 </li>
 			</ul>
 		</div>
 	</nav>
     <div class="container login-container">
-        <h2 class="text-center mb-4">Register</h2>
-        <form id="registerForm">
+        <h2 class="text-center mb-4">Login</h2>
+        <form id="loginForm">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" placeholder="Enter your preferred username">
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="text" class="form-control" id="email" placeholder="Enter your email">
+                <input type="text" class="form-control" id="username" placeholder="Enter your username">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" class="form-control" id="password" placeholder="Enter your password">
             </div>
             <br>
-            <button type="submit" class="btn btn-primary btn-block">Register</button>
-            <p class="mt-3 text-center">Already have an account? <a href="login.html">Login here</a></p>
+            <button type="submit" class="btn btn-primary btn-block">Login</button>
+            <p class="mt-3 text-center">Don't have an account? <a href="/register">Register here</a></p>
         </form>
     </div>
 
     <script src="../scripts/scripts.js"></script>
     <script>
-          document.getElementById("registerForm").addEventListener("submit", function(event) {
+          document.getElementById("loginForm").addEventListener("submit", function(event) {
               event.preventDefault(); // Prevent the form from submitting via the browser
               
               // Redirect to another HTML file
-              submitRegister();
+              submitLogin();
             });
     </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
