the final local version before tests

--- a/frontend/html/profile.html
+++ b/frontend/html/profile.html
@@ -47,7 +47,7 @@
     <div class="row" style="width: 100%;">
         <div class="col-md-8">
             <div class="info-container m-5">
-                <img style="max-height: 300px; width: 100%;" src="../images/profile.avif" class="card-img-top" alt="profile">
+                <img style="max-height: 300px; max-width: 600px;" src="../images/profile.avif" class="card-img-top" alt="profile">
                 <div class="card-body">
                     <!-- <br> -->
                     <div id="profileInfo"></div>
