public data section in homepage got disabled

--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -55,7 +55,7 @@
 				<button class="inside-nav nav-link active" onclick="getPublicStudies();">Availabe Studies</button>
 			</li>
 			<li class="nav-item">
-				<button class="inside-nav nav-link" onclick="getPublicUserData();">Public Data</button>
+				<button class="inside-nav nav-link" onclick="getPublicUserData();" disabled>Public Data</button>
 			</li>
 		</ul>
 
