mystudies button in the navbar fixed to be active in right times

--- a/frontend/html/study.html
+++ b/frontend/html/study.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/mydata">My Data</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/mystudies">My Studies</a>
+                    <a id="mystudies-navbar" class="nav-link" href="/mystudies">My Studies</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/explore">Explore</a>
