--- a/frontend/html/study.html
+++ b/frontend/html/study.html
@@ -59,6 +59,33 @@
         <div class="col-md-2" id="study-side"></div>
     </div>
 
+    <<!-- Join Study Modal -->
+    <div class="modal fade" id="joinStudyModal" tabindex="-1" role="dialog" aria-labelledby="joinStudyModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Join Study</h5>
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <label for="study-input" class="form-label">Participant Identifier<span
+                            class="text-danger">*</span>:</label>
+                    <input type="text" id="study-input" class="form-control" required>
+                    <div id="input-error" class="text-danger mt-2" style="display: none;">This field is required.</div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-success" onclick="submitJoinStudy()">Join Study</button>
+                </div>
+            </div>
+        </div>
+    </div>
+  
+  
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> -->
