removed prolific id from profile information

--- a/frontend/html/edit_profile.html
+++ b/frontend/html/edit_profile.html
@@ -50,7 +50,7 @@
     <div class="form-container container">
         <h2 class="text-center mb-4">Profile Information</h2>
         <form id="editProfileForm">
-            <div class="mb-3">
+            <!-- <div class="mb-3">
                 <label for="prolific_id" class="form-label">
                     Prolific ID
                     <button 
@@ -65,7 +65,7 @@
                     </button>
                 </label>
                 <input type="text" class="form-control" id="prolific_id" placeholder="Enter your Prolific ID">
-            </div>
+            </div> -->
             <div class="mb-3">
                 <label for="nationality" class="form-label">Nationality</label>
                 <input type="text" class="form-control" id="nationality" placeholder="Enter your nationality">
